src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_detail__tests__snapshot_minimal_task.snap
---
source: src/tui/widgets/task_detail.rs
expression: snap(&buffer)
---
 Task Details

 1.1 — Minimal task

 Status: Todo
