src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_detail__tests__snapshot_no_task_selected.snap
---
source: src/tui/widgets/task_detail.rs
expression: snap(&buffer)
---
 Task Details

 No task selected
