src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__task_detail__tests__snapshot_scrolled_content.snap
---
source: src/tui/widgets/task_detail.rs
expression: snap(&buffer)
---
 Task Details


 Dependencies:
   → 1.1

 Related Files:
   • src/tui/widgets/task_detail.rs
   • src/shared/tasks/node.rs

 Implementation Steps:
   1. Utwórz src/tui/widgets/task_detail.rs
   2. Zdefiniuj TaskDetailWidget z ref do TaskNode
   3. Renderuj: ID + Name (bold), Status (colored), Model,
